--- a/calculator.html
+++ b/calculator.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <center>
     <h1 style="color:rgb(255, 0, 140);">CALCULATOR</h1>
     <head>
         <style type="text/css">
         input[type=text]{
-            background-color: black;
-            color:yellowgreen;
+            background-color: rgb(151, 240, 174);
+            color:black;
             height: 100%;
             width: 100%;
             font-size: 40px;
@@ -66,4 +67,5 @@
             }
         </script>
     </body>
+    </center>
 </html>
